-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 5.0.0-rc1
-
Ubuntu 20.04 LTS
-
64da7b15d9d39a4580d5316d9bc59849e19c2621 (qt-creator/qt-creator/5.0)
- Open a project.
- Show the "Build" menu.
The menu items "Clean" and "Rebuild" appear four times each. "Deploy" appears twice. The user has to guess from the menu items nearby what they will do. - Type "t clean" into the Locator.
You'll see four actions which look exactly the same.
In Creator 4.15, all menu items explicitly stated what they will do. Please either revert to this or use proper submenus like:
- All Projects
- Build
- Deploy
- Rebuild
- Clean
- Project "ThisOne"
- Build
- Deploy
- Rebuild
- Clean
- ...
Found by Squish test tst_simple_analyze.
- resulted in
-
QTCREATORBUG-26020 Unexpected behavior of Locator
-
- Reported
-
| For Gerrit Dashboard: QTCREATORBUG-26002 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 360086,2 | Disambiguate the build actions in locator and shortcut settings | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 360462,3 | Squish: Update tst_simple_analyze | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |