Disambiguate the build actions in locator and shortcut settings

By setting a whatsThis text and using that in locator.

Amends 3bd490acdb41d287c1870a8b064b92a858d35352

Fixes: QTCREATORBUG-26002
Change-Id: I55c196456eb0eaec880da4479a0a75105f649b01
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>